Root the result of JSObjectFromInterface.  b=341640  r=markh  sr=jst